tests/errors/sem.expected-ptr.subscript-fn-arg1.or
main :: () -> void {
    @subscript get :: (a: int, index: sint) -> &int {
        return &a;
    };

    get;
};
